Fix: 캐러셀이 overflow되어 상위요소의 width가 넘치는 버그 Fix
Changes to be committed:
modified:   src/components/common/Carousel/Carousel.tsx
modified:   src/components/common/Carousel/carousel.module.scss

--- a/src/components/common/Carousel/carousel.module.scss
+++ b/src/components/common/Carousel/carousel.module.scss
@@ -7,3 +7,7 @@
     display: none;
   }
 }
+
+.s_carouselItem {
+  position: relative;
+}
